Fix layout problem and some visual bugs

--- a/src/app/weather-panel/city/city.component.css
+++ b/src/app/weather-panel/city/city.component.css
@@ -1,50 +1,31 @@
+.detail-text{
+    padding-left:10px;
+}
 .container{
-    
     height:100%;
-    display: flex;
+    overflow:hidden;
     flex-direction: column;
-    flex-basis: 100%;
-    background-color:white;
-    outline:2px solid #333;
+    display: flex;
+}
+.loading-container{
+    margin:auto;
+    position: relative;
+    
+    top:10px;
 }
 
 .card-title{
-    max-width: 100%;
-    height:80px;
-    margin-bottom:10px;
-}
-.title{
     font-size: 1.2rem;
-    color:black;
-    font-weight: 400;
 }
-.line{
-    width:100%;
-    background-color: #333;
-}
-.loading{
-    position: relative;
-    top:200px;
+.card{
     display: flex;
-    justify-content: center;
-}
-.detail{
-    margin-top:7px;
-    margin-bottom:7px;
+    flex-direction: column;
 }
 .detail-text{
-    padding-left:10px;
-    font-weight: 400;
-    margin:4px 0px;
-    color:black;
+    margin-top:7px;
+    margin-bottom:5px;
 }
-.cloud-level-bar{
-    width:75%;
-    margin:auto;
-}
-.no-padding{
-    padding:none !important;
-}
-.margin-top-big{
-    margin-top:50px;
+
+.row:nth-child(2){
+    margin-top:40px;
 }
