--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,9 @@
 .text-center{
     text-align: center;
 }
+html,body{
+    padding: 0px 4px;
+}
+.no-padding{
+    padding:0px !important;
+}
